Fixed social icons vertical aligning

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -195,7 +195,7 @@ pre {
         display: inline-block;
         width: 16px;
         height: 16px;
-        vertical-align: middle;
+        vertical-align: text-top;
 
         path {
             fill: $grey-color;
